; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/motorola/extr_phy-mapphone-mdm6600.c_phy_mdm6600_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/motorola/extr_phy-mapphone-mdm6600.c_phy_mdm6600_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy = type { i32 }
%struct.phy_mdm6600 = type { i32, %struct.gpio_desc** }
%struct.gpio_desc = type { i32 }

@PHY_MDM6600_ENABLE = common dso_local global i64 0, align 8
@EPROBE_DEFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy*)* @phy_mdm6600_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @phy_mdm6600_init(%struct.phy* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.phy*, align 8
  %4 = alloca %struct.phy_mdm6600*, align 8
  %5 = alloca %struct.gpio_desc*, align 8
  store %struct.phy* %0, %struct.phy** %3, align 8
  %6 = load %struct.phy*, %struct.phy** %3, align 8
  %7 = call %struct.phy_mdm6600* @phy_get_drvdata(%struct.phy* %6)
  store %struct.phy_mdm6600* %7, %struct.phy_mdm6600** %4, align 8
  %8 = load %struct.phy_mdm6600*, %struct.phy_mdm6600** %4, align 8
  %9 = getelementptr inbounds %struct.phy_mdm6600, %struct.phy_mdm6600* %8, i32 0, i32 1
  %10 = load %struct.gpio_desc**, %struct.gpio_desc*** %9, align 8
  %11 = load i64, i64* @PHY_MDM6600_ENABLE, align 8
  %12 = getelementptr inbounds %struct.gpio_desc*, %struct.gpio_desc** %10, i64 %11
  %13 = load %struct.gpio_desc*, %struct.gpio_desc** %12, align 8
  store %struct.gpio_desc* %13, %struct.gpio_desc** %5, align 8
  %14 = load %struct.phy_mdm6600*, %struct.phy_mdm6600** %4, align 8
  %15 = getelementptr inbounds %struct.phy_mdm6600, %struct.phy_mdm6600* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %1
  %19 = load i32, i32* @EPROBE_DEFER, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %2, align 4
  br label %24

21:                                               ; preds = %1
  %22 = load %struct.gpio_desc*, %struct.gpio_desc** %5, align 8
  %23 = call i32 @gpiod_set_value_cansleep(%struct.gpio_desc* %22, i32 0)
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %21, %18
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.phy_mdm6600* @phy_get_drvdata(%struct.phy*) #1

declare dso_local i32 @gpiod_set_value_cansleep(%struct.gpio_desc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
